<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/user_face_setting"
        app:titleSize="@dimen/text_size_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_ffffff"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/face_ic_face_open_status" />

        <TextView
            android:id="@+id/activity_account_login_by_face_switch_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:text="人脸登录"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_face_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1.0"
        android:background="@color/white_ffffff"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/activity_account_login_by_face_switch_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/user_login_open_face"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/text_size_17" />

        <ImageView
            android:id="@+id/activity_account_login_by_face_switch_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitEnd"
            android:src="@mipmap/face_ic_switch_off" />

    </RelativeLayout>

    <TextView
        android:id="@+id/user_tv_reset_face_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_15"
        android:text="@string/user_use_face_default"
        android:textColor="@color/gray_999999"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/user_tv_reset_face"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white_ffffff"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:text="重置人脸"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/text_size_17" />
</LinearLayout>
